# kube-gestalt

./: Cargo.toml  Makefile  README.md
.run/: check.run.xml  clippy.run.xml
src/: main.rs  router.rs  store.rs  webserver.rs
templates/: home.html  node_summary.html  pod_node_summary.html  pod_summary.html
test-cluster/: Makefile  kind-config.yaml
