[package]
name = "kube-gestalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version= "0.82", features = ["runtime"] }
k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
