[package]
name = "kube-gestalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.6" }
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
kube = { version= "0.82", features = ["runtime"] }
rand = "0.8"
tokio = { version = "1.28.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = [
    "add-extension",
    "map-request-body",
    "request-id",
    "sensitive-headers",
    "util",
] }
